--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="topArtist">Top Artísta de Colombia.</string>
     <string name="lastFm">Last.FM</string>
     <string name="mensaje">Los artistas más escuchados en Colombia !!!</string>
+    <string name="Error">Los artistas más escuchados en Colombia !!!</string>
+    <string name="Errorinformacion">Error al obtener información</string>
+    <string name="ErrorServer">Error del servidor. Intenta nuevamente.</string>
+    <string name="ErrorConexion">No tiene conexión a Internet</string>
+    <string name="ErrorInesperado">Se produjo un error desconocido.</string>
+
 </resources>
